Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1591,7 +1591,7 @@
     "update-time": "Hora de actualización",
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Actualizador",
-    "updates-available": "Aktualizace k dispozici",
+    "updates-available": "Aktualizace jsou k dispozici",
     "updates-available-p": "Jsou k dispozici aktualizace pro FacturaScripts. Prosím, klikněte na aktualizátor a stáhněte si novou verzi. Aktualizace opravují chyby a přidávají nové funkce.",
     "updating-attached-relations": "Aktualizace připojených vztahů",
     "upload-file": "Subir archivo",
