--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -154,7 +154,7 @@
     "banking-movements": "Bankbewegungen",
     "barcode": "Strichcode",
     "bcc": "BCC",
-    "become-sponsor": "Sponsoren werden",
+    "become-sponsor": "Sponsor werden",
     "big": "Groß",
     "billing": "Abrechnung",
     "billing-address": "Rechnungsadresse",
@@ -951,7 +951,7 @@
     "messages-component-title": "Nachrichten und Nachrichten",
     "meta-description": "FacturaScripts ist ein Billing und Accounting-Software für kleine Unternehmen. Es ist freie Software unter der GNU\/LGPL Lizenz.",
     "method-payment": "Zahlungsart",
-    "mime-type": "Mime Type",
+    "mime-type": "Mime-Typ",
     "minimum-amount-with-cifnif": "Minimalbetrag mit CIF\/NIF",
     "minimum-amount-without-cifnif": "Mindestbetrag ohne CIF\/NIF",
     "minimum-stock": "Mindestbestand",
@@ -1014,9 +1014,9 @@
     "nick": "Kerbe",
     "no": "nicht",
     "no-data": "Keine Daten",
-    "no-data-received-form": "Ningún dato recibido por formulario",
+    "no-data-received-form": "Keine Daten vom Formular erhalten",
     "no-extra-lines": "Keine zusätzlichen Zeilen hinzufügen",
-    "no-gaps-found": "Ningún hueco encontrado",
+    "no-gaps-found": "Keine Lücken gefunden",
     "no-invoice": "keine Rechnung",
     "no-outstanding-amount": "Kein ausstehender Betrag",
     "no-print-permission": "No tiene permiso para imprimir o exportar",
@@ -1048,7 +1048,7 @@
     "number": "Nummer",
     "number-attachments": "Anzahl der Anhänge",
     "number-length": "number-length",
-    "number-recipients": "Nº perceptores",
+    "number-recipients": "Nº Empfänger",
     "number2": "Nummer 2",
     "numeric-formats": "Numerische Formate",
     "numsupplier": "Num. Lieferant",
@@ -1101,13 +1101,13 @@
     "parent-account": "Mutterkonto",
     "parent-family-cant-be-child": "Die Elternfamilie kann nicht mit dem Kind identisch sein.",
     "parent-group": "Parent group",
-    "parent-group-cant-be-the-same-group": "Parent group can't be the same group",
+    "parent-group-cant-be-the-same-group": "Die übergeordnete Gruppe kann nicht dieselbe Gruppe sein",
     "parent-group-loop": "Die übergeordnete Gruppe %parentGroup% verursacht eine zirkuläre Beziehung.",
     "partnumber": "Artikelnummer",
     "passenger": "Pasajero",
     "password": "Contraseña",
     "pattern": "Muster",
-    "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
+    "pattern-without-number": "Das gewählte Muster enthält keine Zahl, daher könnte es sein, dass duplikative Codes erzeugt werden.",
     "pattern-without-serie": "El patrón elegido no incluye serie, por lo que es posible que genere códigos duplicados para cada serie",
     "pattern-without-year": "El patrón elegido no incluye ejercicio o fecha, por lo que es posible que genere códigos duplicados en cada ejercicio",
     "pay": "bezahlen",
@@ -1197,7 +1197,7 @@
     "priority": "Priorität",
     "private": "Privat",
     "private-key": "Privater Schlüssel",
-    "process": "Proceso",
+    "process": "Prozess",
     "processing": "Verarbeitung",
     "product": "Produkt",
     "product-not-found": "P",
@@ -1226,14 +1226,14 @@
     "quantity-abb": "Menge",
     "quantity-remaining": "Verbleibende Menge",
     "quantity-served": "quantity-served",
-    "quantity-sold": "quantity-sold",
+    "quantity-sold": "Verkaufte Menge",
     "randomizer-generating-more-items": "Generiere weitere Elemente...",
     "rate": "Rate",
     "rates": "Preise",
     "re": "RE",
     "re-open": "Wieder öffnen",
     "react": "Reagieren",
-    "read-message-by": "Leído por %nick% el %date%",
+    "read-message-by": "Gelesen von %nick% am %date%",
     "read-more": "Mehr lesen",
     "readonly": "Nur lesen",
     "rebuild": "Wiederherstellen",
@@ -1310,7 +1310,7 @@
     "review-date": "Prüfungsdatum",
     "right": "Rechts",
     "risky-customer": "Riskanter Kunde",
-    "rol": "Rol",
+    "rol": "Rolle",
     "role": "Rolle",
     "roles": "Rollen",
     "rules": "Rules",
@@ -1400,14 +1400,14 @@
     "social-security-number": "Sozialversicherungsnummer",
     "sort": "Order",
     "sort-by-column": "Nach Spalte sortieren",
-    "sort-by-date-asc": "Ordenar por fecha desc.",
+    "sort-by-date-asc": "Nach Datum aufsteigend sortieren",
     "sort-by-date-desc": "Ordenar por fecha desc.",
     "sort-by-ref-asc": "Ordenar por referencia asc.",
     "sort-by-ref-desc": "Nach Referenz absteigend sortieren",
     "sorted-asc": "Aufsteigend sortiert",
-    "sorted-desc": "Ordenado descendente",
+    "sorted-desc": "Absteigend sortiert",
     "source": "Quelle",
-    "source-code": "Source code",
+    "source-code": "Quellcode",
     "special-account": "Sonderkonto",
     "special-accounting-entries": "special-accounting-entries",
     "special-accounts": "special-accounts",
@@ -1435,7 +1435,7 @@
     "stripe": "Streifen",
     "structured-data-csv": "CSV-Datei",
     "sub-account": "Unterkonto",
-    "sub-type": "sub-type",
+    "sub-type": "Untertyp",
     "subaccount": "Unterkonten",
     "subaccount-bad-codcuenta": "Das Unterkonto %codsubcuenta% hat ein falsches Konto zugewiesen.",
     "subaccount-belongs-other-year": "Unterkonto 0 gehört zu einem anderen Geschäftsjahr.",
@@ -1577,7 +1577,7 @@
     "unit-purchase-price": "Einzelhandelspreis",
     "unit-sale-price": "unit-sale-price",
     "unlimited": "Unbegrenzt",
-    "unlink": "Desvincular",
+    "unlink": "Trennen",
     "unlink-file": "unlink-file",
     "unlink-install-ok": "Installation erfolgreich aus dem Register gelöscht.",
     "unlock-entry": "Eintrag entsperren",
@@ -1598,7 +1598,7 @@
     "uploaded-at": "geladen am",
     "url": "Webseite",
     "use-gaps": "Lücken nutzen",
-    "use-holes-invoices-esp": "Si desmarcas el uso de huecos en facturas y eliminas alguna se quedará el hueco en la facturación y tendrás problemas con hacienda",
+    "use-holes-invoices-esp": "Wenn Sie die Verwendung von Lücken in Rechnungen abwählen und eine löschen, bleibt die Lücke in der Abrechnung und Sie haben Probleme mit dem Finanzamt.",
     "user": "Benutzer",
     "user-and-config": "Usuario y configuración",
     "users": "Benutzer",
@@ -1630,7 +1630,7 @@
     "video": "Video",
     "vies-check-success": "El número '%vat-number%' está registrado en el sistema VIES",
     "view-api": "API anzeigen",
-    "view-column-net-subtotal": "Ver columna subtotal o neto",
+    "view-column-net-subtotal": "Spalte Nettosumme oder Subtotal anzeigen",
     "view-estimation": "Schätzung anzeigen",
     "view-order": "Bestellung anzeigen",
     "warehouse": "Warenhaus",
@@ -1638,7 +1638,7 @@
     "warehouse-must-be-same-business": "Ursprungs- und Ziellager müssen von derselben Firma sein",
     "warehouses": "Lagerhallen",
     "warning": "<b>Warnung<\/b>",
-    "warnings": "Avisos",
+    "warnings": "Warnungen",
     "web": "web:",
     "website": "Webseite",
     "wednesday": "Mittwoch",
