--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -227,7 +227,7 @@
     "check-vies": "Controlla VIES",
     "checked": "controllato",
     "children": "Bambini",
-    "children-accounts": "Children Accounts",
+    "children-accounts": "Conti figli",
     "choose-currency": "Scegli la valuta",
     "choose-doc-type": "Choose document type",
     "choose-employee": "Scegli dipendente",
@@ -270,7 +270,7 @@
     "combination-code": "Codice di combinazione",
     "combinations": "combinazioni",
     "commercial-terms": "Termini commerciali",
-    "commission": "commission",
+    "commission": "Commissione",
     "commission-general-info": "Elenco delle percentuali di commissione applicabili alla vendita di prodotti. Verrà applicata la percentuale con le condizioni più restrittive o specifiche comunicate.",
     "commission-settlement": "Liquidazione delle commissioni %code%",
     "commissions": "commissioni",
@@ -468,7 +468,7 @@
     "do-nothing": "Non fare niente",
     "doc-type": "Tipo di documento",
     "document": "Documento",
-    "document-configuration": "document-configuration",
+    "document-configuration": "Configurazione documenti",
     "document-report": "Reports documenti",
     "document-sequence": "sequenza del documento",
     "document-sequences": "sequenze di documenti",
@@ -486,7 +486,7 @@
     "dont-sell-above-pvp": "Non vendere al di sopra del prezzo al dettaglio",
     "dont-sell-below-cost": "Non vendere sottocosto",
     "download": "Scarica",
-    "download-completed": "download-completed",
+    "download-completed": "Download completato",
     "download-error": "Errore durante il download. Codice %status% - %error%",
     "download-xml": "Scarica XML",
     "downloads": "download",
@@ -621,7 +621,7 @@
     "filter-method": "Metodo di filtro",
     "filter-records-containing-indicated-value": "Filtra i record che contengono il valore indicato",
     "filters": "Filtri",
-    "finalize": "finalize",
+    "finalize": "Finalizzare",
     "find-problems": "Trova problemi",
     "finished": "Completato",
     "finished-cron": "Esecuzione del cron di FacturaScripts terminata, tempo necessario: %timeNeeded% secondi",
@@ -752,7 +752,7 @@
     "import-accounting-plan-p": "Lascia questo campo vuoto per utilizzare il piano contabile predefinito. Oppure seleziona un file con il tuo piano contabile personalizzato.",
     "import-file": "Importare file",
     "in-progress": "In corso",
-    "in-stock": "in-stock",
+    "in-stock": "Disponibile",
     "inactive": "inattivo",
     "income-and-expenses": "Ingressi e Uscite",
     "incompatible-document": "Documento incompatibile: %code%. Per raggruppare i documenti devono avere lo stesso cliente o fornitore, serie, magazzino, valuta e sconti globali.",
@@ -840,7 +840,7 @@
     "languages-es_MX": "Spagnolo (Messico)",
     "languages-es_PA": "Spagnolo (Panama)",
     "languages-es_PE": "Spagnolo (Perù)",
-    "languages-es_UY": "languages-es_UY",
+    "languages-es_UY": "Lingue-es_UY",
     "languages-eu_ES": "Euskera",
     "languages-fr_FR": "Francese",
     "languages-gl_ES": "lingue-gl_ES",
@@ -934,7 +934,7 @@
     "max-input-vars-warning": "avviso-max-input-vars",
     "max-risk": "Rischio massimo",
     "maximum-amount-with-cifnif": "Importo massimo con CIF\/NIF",
-    "maximum-amount-without-cifnif": "Máximo importe sin CIF\/NIF",
+    "maximum-amount-without-cifnif": "Importo massimo senza CIF\/NIF",
     "maximum-stock": "Scorte massime",
     "may": "Mayo",
     "mega-search": "MegaRicerca",
@@ -961,7 +961,7 @@
     "missing-data-subaccount": "Dati mancano dal subaccount.",
     "missing-epigraph-data": "I dati mancano dall'epigrafe.",
     "missing-file": "File mancante",
-    "missing-file-help": "This file seems to be missing from your installation. Maybe you don't use it, but <em>you can't remove it<\/em>.",
+    "missing-file-help": "Sembra che questo file manchi dalla tua installazione. Forse non lo usi, ma <em>non puoi eliminarlo<\/em>.",
     "mobile": "Mobile",
     "model": "Modello",
     "model-not-found": "Modello non trovato: %model%",
@@ -979,7 +979,7 @@
     "month-7": "Luglio",
     "month-8": "Agosto",
     "month-9": "settembre",
-    "month-name": "Month Name",
+    "month-name": "Nome del mese",
     "month-wildcard-info": "Mese corrente (della data corrente)",
     "monthly": "Mensile",
     "monthly-payment": "Pago mensual",
@@ -1047,7 +1047,7 @@
     "november": "Novembre",
     "number": "Numero",
     "number-attachments": "Nº di allegati",
-    "number-length": "number-length",
+    "number-length": "Lunghezza del numero",
     "number-recipients": "Nº perceptores",
     "number2": "il numero 2",
     "numeric-formats": "Formati numerici",
@@ -1279,9 +1279,9 @@
     "remove-filter": "rimuovi filtro",
     "remove-from-list": "Rimuovi dalla lista",
     "removing-logs-until": "Rimozione log fino al %date%",
-    "renew": "renew",
+    "renew": "Rinnovare",
     "renumber": "Rinumerare",
-    "renumber-accounting": "Renumber Accounting",
+    "renumber-accounting": "Rinumerare la contabilità",
     "renumber-accounting-error": "An error occurred while renumber accounting entries in financial year %exerciseCode%",
     "renumber-accounting-ok": "Rinumerazione delle voci contabili completata",
     "renumber-accounting-p": "Rinumera le scritture contabili per data, da minore a maggiore",
@@ -1397,7 +1397,7 @@
     "small": "piccolo",
     "smaller-than": "Più piccolo di",
     "soap-extension-not-installed": "La extensión SOAP non è attiva in PHP. Contatta il tuo fornitore di hosting per attivarla.",
-    "social-security-number": "Social Security number",
+    "social-security-number": "Numero di previdenza sociale",
     "sort": "Ordinare",
     "sort-by-column": "Ordina per colonna",
     "sort-by-date-asc": "Ordina per data disc.",
@@ -1474,7 +1474,7 @@
     "supplier-not-found": "Fornitore non trovato",
     "supplier-order": "Supplier order",
     "supplier-orders": "Ordini fornitore",
-    "supplier-payment-concept": "receipt-payment-concept",
+    "supplier-payment-concept": "Pagamento della ricevuta %document%",
     "supplier-products": "Prodotti del fornitore",
     "supplier-reference": "Riferimento del fornitore",
     "suppliers": "fornitori",
@@ -1484,7 +1484,7 @@
     "surcharge": "Sovraccarico",
     "surname": "cognomi",
     "suspended": "Sospeso",
-    "swift": "veloce",
+    "swift": "Swift\/BIC",
     "symbol": "Simbolo",
     "table": "tabella",
     "table-checked": "Tabella 0 controllata.",
@@ -1515,7 +1515,7 @@
     "test-sendmail-not-implemented": "Il test del controllore di posta sendmail non è implementato",
     "text-color": "Colore del testo",
     "texts": "testi",
-    "third-quarter": "3º trimestre",
+    "third-quarter": "3° trimestre",
     "third-trimester": "Terzo trimestre",
     "this-last-fortnight": "Ultimi 15 giorni",
     "this-last-month": "Questo ultimo mese",
@@ -1593,7 +1593,7 @@
     "updater": "Updater",
     "updates-available": "Aggiornamenti disponibili",
     "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
-    "updating-attached-relations": "Actualizando contadores de archivos adjuntos",
+    "updating-attached-relations": "Aggiornamento dei contatori dei file allegati",
     "upload-file": "Carica file",
     "uploaded-at": "Caricato alle",
     "url": "Sito web",
