--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -8,7 +8,7 @@
     "accepted": "Aceptado",
     "accepts-emails-commas": "Akceptuje wiele adresów e-mail oddzielonych przecinkami",
     "access-denied": "Acceso denegado",
-    "access-denied-p": "Usted no tiene permiso para ver estos datos. Si cree que si que debería tener permiso para ver estos datos, contacte con su administrador para que le conceda permiso.",
+    "access-denied-p": "Nie masz uprawnień do przeglądania tych danych. Jeśli uważasz, że powinieneś mieć dostęp do tych danych, skontaktuj się z administratorem, aby przyznał Ci dostęp.",
     "account": "Cuenta",
     "account-bad-parent": "La cuenta %codcuenta% tiene asociada una cuenta padre equivocada.",
     "account-balance": "Saldo konta",
@@ -250,12 +250,12 @@
     "closing-accounting-completed": "Ejercicio cerrado correctamente",
     "closing-closing-concept": "Asiento de cierre del ejercicio %exercise%",
     "closing-opening-concept": "Wprowadzenie otwierające ćwiczenie %exercise%",
-    "closing-operation": "Cierre",
+    "closing-operation": "Zamknięcie",
     "closing-regularization-concept": "Ewidencja regulacyjna roku %exercise%",
     "codbarras": "Kod kreskowy",
     "code": "Código",
     "codiso": "Código ISO",
-    "color": "Color",
+    "color": "Kolor",
     "color-danger": "Kolor niebezpieczeństwa",
     "color-dark": "Color oscuridad",
     "color-info": "Color info",
@@ -277,7 +277,7 @@
     "common-data": "Dane wspólne",
     "common-error": "Błąd",
     "companies": "Empresas",
-    "company": "Empresa",
+    "company": "Firma",
     "company-commission-info": "Sólo se aplicará a la empresa seleccionada",
     "company-manager": "Administrador de la empresa",
     "company-name": "Nombre de empresa",
@@ -436,13 +436,13 @@
     "desc-parent-family": "Wskaż, czy rodzina jest zgrupowana na wyższym poziomie.",
     "desc-payment-days": "Ejemplo: 1,15,31",
     "desc-provicer-business-name-2": "Opis nazwy firmy dostawcy 2",
-    "desc-provider-business-name": "Descripción nombre de empresa de proveedor",
+    "desc-provider-business-name": "Opis nazwy firmy dostawcy",
     "desc-provider-name": "Nombre por el que es conocido el proveedor. Para uso interno.",
     "desc-rate-code": "Kod do wewnętrznego użytku stawki.",
     "desc-vat-document": "Identyfikator dokumentu, w którym stosuje się podatek",
     "description": "Opis",
     "description-1": "Descripción 1",
-    "description-2": "Descripción 2",
+    "description-2": "Opis 2",
     "description-3": "Descripción 3",
     "description-4": "Opis 4",
     "description-4ba": "Descripción 4ba",
@@ -470,7 +470,7 @@
     "document": "Documento",
     "document-configuration": "Configuración de documentos",
     "document-report": "Informe de documentos",
-    "document-sequence": "Secuencia de documento",
+    "document-sequence": "Sekwencja dokumentu",
     "document-sequences": "Secuencias de documentos",
     "document-states": "Estados del documento",
     "document-type": "Tipo documento",
@@ -503,7 +503,7 @@
     "email-bcc": "Email z kopią ukrytą",
     "email-cc": "Email z kopią",
     "email-not-configured": "Email nie jest skonfigurowany. Możesz skonfigurować email w menu administratora, panelu sterowania, preferencjach aplikacji.",
-    "email-not-sent": "No enviado",
+    "email-not-sent": "Nie wysłano",
     "email-notification": "Powiadomienie pocztą elektroniczną",
     "email-notification-disabled": "Powiadomienie e-mail %name% jest wyłączone",
     "email-notification-not-exists": "Nie znaleziono powiadomienia e-mail %name%",
@@ -601,7 +601,7 @@
     "family-code": "Kod rodziny",
     "fax": "Faks",
     "february": "Febrero",
-    "field-can-not-be-null": "El campo %fieldName% de la tabla %tableName% no puede ser nulo",
+    "field-can-not-be-null": "Pole %fieldName% w tabeli %tableName% nie może być puste",
     "field-required": "Pole wymagane: %field%",
     "fields": "Campos",
     "file": "Plik",
@@ -746,7 +746,7 @@
     "images": "Obrazy",
     "images-added-correctly": "%count% zdjęć zostało dodanych poprawnie",
     "impacted-tax-re-subaccount": "Subcuenta recargo repercutido",
-    "impacted-tax-subaccount": "Subcuenta impuesto repercutido",
+    "impacted-tax-subaccount": "Podkonto podatku odsprzedanego",
     "import": "Importować",
     "import-accounting-plan": "Importar plan contable",
     "import-accounting-plan-p": "Deje este campo en blanco para usar el plan contable predeterminado. O bien seleccione un archivo con su plan contable personalizado.",
@@ -871,7 +871,7 @@
     "level": "Nivel",
     "level-benefit-sales": "Poziom do zobaczenia korzyści",
     "level-cost-sales": "Poziom do zobaczenia kosztów",
-    "level1": "Nivel 1",
+    "level1": "Poziom 1",
     "level2": "Poziom 2",
     "level3": "Nivel 3",
     "level4": "Poziom 4",
@@ -888,7 +888,7 @@
     "location": "Lokalizacja",
     "lock-accounting": "Bloquear contabilidad",
     "lock-entry": "Zablokuj wpis",
-    "lock-invoice": "Marcar emitida",
+    "lock-invoice": "Oznacz jako wystawioną",
     "lock-unlock": "(Des)Bloquear",
     "lock-unlock-account-entry": "Bloquear\/Desbloquear el asiento contable",
     "locked": "Bloqueado",
@@ -1054,8 +1054,8 @@
     "numsupplier": "Núm. proveedor",
     "observations": "Uwagi",
     "october": "Octubre",
-    "offsetting-account": "Cuenta para contrapartida",
-    "only-active": "Solamente activos",
+    "offsetting-account": "Konto do kompensacji",
+    "only-active": "Tylko aktywne",
     "only-charged": "Sólo pagados",
     "only-closed": "Solamente cerrados",
     "only-insert": "Sólo añadir",
@@ -1075,7 +1075,7 @@
     "options": "Opciones",
     "options-button-header": "Układ i uprawnienia",
     "order": "Zamówienie",
-    "order-email-subject": "Su pedido %code%",
+    "order-email-subject": "Twoje zamówienie %code%",
     "order-email-text": "Dzień dobry, załączam Twoje zamówienie %code%",
     "orders": "Zamówienia",
     "origin": "Origen",
@@ -1095,7 +1095,7 @@
     "pagename": "Nazwa strony",
     "pages": "Páginas",
     "paid": "Pagado",
-    "paid-or-unpaid": "Pagado o impagado",
+    "paid-or-unpaid": "Opłacone lub nieopłacone",
     "paid-receipts-prevent-action": "Nie można wykonać tej akcji, mając opłacone paragon",
     "parent": "Rodzic",
     "parent-account": "Konto główne",
@@ -1499,7 +1499,7 @@
     "tax": "Impuesto",
     "tax-area": "Zona de impuestos",
     "tax-areas": "Obszary podatkowe",
-    "tax-base": "Base Imponible",
+    "tax-base": "Podstawa opodatkowania",
     "tax-credit-account": "Cuenta de crédito para impuestos",
     "tax-debit-account": "Konto debetowe do podatków",
     "tax-transport": "Podatki od transportu",
