--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -171,7 +171,7 @@
     "business-name": "Nome da empresa",
     "buy": "Comprar",
     "cache": "Cache",
-    "cache-dir": "Diretório de cache '0'",
+    "cache-dir": "Diretório de cache '%folderName%'",
     "calculate": "Calcular",
     "calculated-net-diff": "Diferença encontrada ao calcular o líquido. %net% VS %net2%",
     "calculated-surcharge-diff": "Diferença encontrada ao calcular a sobretaxa de equivalência. %surcharge% VS %surcharge2%",
@@ -270,7 +270,7 @@
     "combination-code": "Código de combinação",
     "combinations": "Combinações",
     "commercial-terms": "Termos comerciais",
-    "commission": "commission",
+    "commission": "Comissão",
     "commission-general-info": "Relação de porcentagens de comissão que se aplicam na venda de produtos. O percentual mais restritivo ou específico será aplicado.",
     "commission-settlement": "Liquidação de comissões %code%",
     "commissions": "Comissões",
@@ -342,7 +342,7 @@
     "crons": "Crons",
     "currency": "Moeda",
     "currency-position": "Posição do símbolo da moeda",
-    "current-quarter": "Trimestre actual",
+    "current-quarter": "Trimestre atual",
     "current-risk": "Risco atual",
     "customer": "Cliente",
     "customer-account-not-found": "Conta do cliente não encontrada",
@@ -372,7 +372,7 @@
     "dasboard-backup-li3": "S",
     "dashboard": "Painel de controle",
     "dashboard-backup": "Cópia de segurança",
-    "dashboard-backup-p": "Le recordamos que tiene instalado FacturaScripts en su PC, por tanto los datos (las facturas, clientes, etc...) se almacenan en su PC y solamente en su PC. Haga copias de seguridad de forma regular y guarde esas copias lejos del PC.",
+    "dashboard-backup-p": "Lembramos que você tem o FacturaScripts instalado no seu PC, portanto os dados (faturas, clientes, etc...) são armazenados no seu PC e somente no seu PC. Faça backups regularmente e guarde esses backups longe do PC.",
     "dashboard-for": "Dashboard da %company%",
     "data-source": "Dados de origem",
     "database": "Base de dados",
@@ -383,7 +383,7 @@
     "date-of-suspension": "Date of suspension",
     "date-of-the-document": "Data do documento",
     "date-out": "Data de saída",
-    "date-out-of-exercise-range": "Data da faixa de excervise 0",
+    "date-out-of-exercise-range": "A data está fora do intervalo do exercício %exerciseName%",
     "date-wildcard-info": "Data atual (data do computador)",
     "dateentry-wildcard-info": "dateentry-wildcard-info",
     "day": "day",
@@ -392,7 +392,7 @@
     "days-until-expiration": "Dias até o vencimento",
     "db-host": "Servidor de banco de dados",
     "db-name": "Nome do banco de dados",
-    "db-password": "Senha da base de dados",
+    "db-password": "Senha do banco de dados",
     "db-port": "Porta do banco de dados",
     "db-type": "Tipo de servidor SQL",
     "db-type-not-recognized": "Tipo de banco de dados não reconhecido. Deve ser MySQL ou PostgreSQL",
@@ -631,7 +631,7 @@
     "fiscal-data": "Dados fiscais",
     "fiscal-exercise": "Exercício fiscal",
     "fiscal-id": "Id. Fiscal",
-    "fiscal-number": "fiscal-number",
+    "fiscal-number": "Núm. fiscal",
     "fixed-value": "Valor fixo",
     "flag": "Bandeira",
     "folder-not-writable": "Não é possível escrever na pasta FacturaScripts.",
@@ -767,7 +767,7 @@
     "installer": "Instalador",
     "installer-p": "Bem-vindo ao instalador do FacturaScripts. Preencha os campos necessários para se conectar ao banco de dados.",
     "installer-requirements": "Os seguintes requisitos do instalador são necessários no FacturaScripts:",
-    "integrity-check": "Integrity check",
+    "integrity-check": "Verificação de integridade",
     "integrity-check-help": "Esta é uma verificação da integridade do sistema, descrita como",
     "interest": "Interesse",
     "international-identifier": "Identificador internacional",
@@ -791,7 +791,7 @@
     "invoice-new-assigned-date": "Já existem faturas com data superior a (%oldDate%). Nova data atribuída: %newDate%",
     "invoice-number": "Número da fatura",
     "invoice-receipts-diff": "Há uma diferença (%diff%) entre o valor da fatura e a soma de seus recibos.",
-    "invoice-regularized-cant-change-date": "A fatura está dentro de uma regularização de 0. A data não pode ser modificada.",
+    "invoice-regularized-cant-change-date": "A fatura está dentro de uma regularização de %tax%. A data não pode ser modificada.",
     "invoice-regularized-cant-delete": "A fatura está dentro de uma regularização de 0. Ele não pode ser excluído.",
     "invoice-without-acc-entry": "Fatura sem lançamento",
     "invoiced": "faturado",
@@ -861,7 +861,7 @@
     "last-semester": "Último semestre",
     "last-trimester": "Último trimestre",
     "last-update": "Última mudança",
-    "last-user": "Último usuario",
+    "last-user": "Último usuário",
     "last-week": "A semana passada",
     "last-year": "Último ano",
     "latitude": "Latitude",
@@ -875,7 +875,7 @@
     "level2": "Nível 2",
     "level3": "Nível 3",
     "level4": "Level 4",
-    "liabilities": "Liabilities",
+    "liabilities": "Passivo",
     "library": "Biblioteca",
     "license": "Licença",
     "like-than": "Mais do que",
@@ -887,7 +887,7 @@
     "loading-controller": "Carregando controlador: '%controllerName%'",
     "location": "Localização",
     "lock-accounting": "Bloquear contabilidade",
-    "lock-entry": "lock-entry",
+    "lock-entry": "Bloquear lançamento",
     "lock-invoice": "Bloquear fatura",
     "lock-unlock": "Bloquear-Desbloquear",
     "lock-unlock-account-entry": "Block\/Unlock the accounting entry",
@@ -929,7 +929,7 @@
     "march": "Março",
     "margin": "m",
     "margin-top": "Topo da margem",
-    "mark-as-homepage": "Marque como página inicial",
+    "mark-as-homepage": "Marcar como página inicial",
     "marked-as-homepage": "M",
     "max-input-vars-warning": "Com a configuração atual do PHP (max_input_vars), você não poderá trabalhar com documentos de mais de %numlines% linhas.",
     "max-risk": "Risco máximo",
@@ -989,7 +989,7 @@
     "more-plugins": "Mais plugins",
     "move-lines": "Mover linhas",
     "movements": "movimentos",
-    "my-profile": "Mi perfil",
+    "my-profile": "Meu perfil",
     "mysql": "MySQL",
     "mysql-socket": "Socket MySQL",
     "mysql-socket-p": "Este campo é necessário em algumas hospedagens com MySQL.",
@@ -1000,7 +1000,7 @@
     "negative-balance": "Saldo Negativo",
     "net": "Líquido",
     "new": "Novo",
-    "new-acc-entry-line-p": "Puedes introducir una línea escribiendo el código de la subcuenta debajo o pulsando el botón subcuentas y seleccionando una subcuenta.",
+    "new-acc-entry-line-p": "Você pode inserir uma linha digitando o código da subconta abaixo ou clicando no botão subcontas e selecionando uma subconta.",
     "new-address": "Nova endereço",
     "new-customer": "Novo Cliente",
     "new-customers": "Novos Clientes",
@@ -1054,7 +1054,7 @@
     "numsupplier": "Núm. fornecedor",
     "observations": "Observações",
     "october": "Octubre",
-    "offsetting-account": "Offsetting account",
+    "offsetting-account": "Conta de contrapartida",
     "only-active": "Somente ativos",
     "only-charged": "Apenas cobrados",
     "only-closed": "Apenas fechado",
@@ -1232,7 +1232,7 @@
     "rates": "Preços",
     "re": "RE",
     "re-open": "Reabrir",
-    "react": "Reaccionar",
+    "react": "Reagir",
     "read-message-by": "Lido por %nick% em %date%",
     "read-more": "Ler mais",
     "readonly": "Somente leitura",
@@ -1347,7 +1347,7 @@
     "send-invoices": "Enviar faturas",
     "send-location": "Enviar localização",
     "send-mail": "Enviar email",
-    "send-mail-error": "send-mail-error",
+    "send-mail-error": "Erro ao enviar o email",
     "send-mail-ok": "Email enviado corretamente",
     "send-videos": "Enviar vídeos",
     "sent-a-audio": "Enviou um áudio",
@@ -1357,7 +1357,7 @@
     "sent-a-video": "Enviou um vídeo",
     "sent-message-by": "Enviado por %nick% em %date%",
     "sepa-suffix": "Sufixo SEPA",
-    "september": "Septiembre",
+    "september": "Setembro",
     "sequences": "Sequências",
     "serial-number": "Número de Série",
     "serie": "Série",
@@ -1391,7 +1391,7 @@
     "signature": "Assinatura",
     "simple": "Simples",
     "simplified": "Simplificado",
-    "size": "size",
+    "size": "Tamanho",
     "sketch": "Esboço",
     "sketch-invoice-warning": "Esta fatura ainda é um esboço. Torná-la oficial alterando seu status para emitida.",
     "small": "Pequeno",
@@ -1410,7 +1410,7 @@
     "source-code": "Código fonte",
     "special-account": "Conta especial",
     "special-accounting-entries": "special-accounting-entries",
-    "special-accounts": "special-accounts",
+    "special-accounts": "Contas especiais",
     "specials-actions": "Specials Actions",
     "spreadsheet-xls": "Arquivo XLS",
     "standard": "Padrão",
@@ -1426,7 +1426,7 @@
     "status-name-valid-length": "Nome de status inválido. Deve ter entre 1 e 20 caracteres.",
     "status-value-is-number": "El campo estado deve ser numérico.",
     "stock": "Estoque",
-    "stock-transfer": "stock transfer",
+    "stock-transfer": "Transferência de stock",
     "stock-transfers": "stock transfers",
     "stockmax": "Estoque máximo",
     "stockmin": "Estoque mín.",
@@ -1450,7 +1450,7 @@
     "subject": "Assunto",
     "subtotal": "Subtotal",
     "subtract": "Tirar do estoque",
-    "success": "success",
+    "success": "Sucesso",
     "sum": "Soma",
     "sum-netos-line-tax-must-be": "A soma dos líquidos das linhas de IVA deve ser: %lineNet%",
     "sum-total-line-tax-must-be": "A soma dos impostos totais das linhas de IVA deve ser: %lineTotalTax%",
@@ -1575,7 +1575,7 @@
     "undo": "Desfazer",
     "unit-profit": "lucro unitário",
     "unit-purchase-price": "Preço de compra por unidade",
-    "unit-sale-price": "unit-sale-price",
+    "unit-sale-price": "Preço de venda unit.",
     "unlimited": "Ilimitado",
     "unlink": "Desvincular",
     "unlink-file": "Desvincular arquivo",
@@ -1671,7 +1671,7 @@
     "years": "Anos",
     "yes": "Sim",
     "yesterday": "Ontem",
-    "you-cant-delete-primary-variant": "No puedes eliminar la variante principal del producto",
+    "you-cant-delete-primary-variant": "Você não pode excluir a variante principal do produto",
     "you-sent-a-audio": "Enviaste um áudio",
     "you-sent-a-document": "Enviaste un documento",
     "you-sent-a-location": "Você enviou uma localização",
