--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -342,7 +342,7 @@
     "crons": "Crons",
     "currency": "Moeda",
     "currency-position": "Posição do símbolo da moeda",
-    "current-quarter": "Trimestre actual",
+    "current-quarter": "Trimestre atual",
     "current-risk": "Risco atual",
     "customer": "Cliente",
     "customer-account-not-found": "customer-account-not-found",
@@ -464,7 +464,7 @@
     "display": "Display",
     "display-date": "Data de exibição",
     "do-not-disable-plugins": "Não desativar plugins",
-    "do-not-group": "do-not-group",
+    "do-not-group": "Não agrupar",
     "do-nothing": "Não fazer nada",
     "doc-type": "Document type",
     "document": "Documento",
@@ -696,7 +696,7 @@
     "greater-than": "Melhor que",
     "grid-help": "Control + Enter para quebra de linha. Pode mover ou eliminar as linhas clicando no número da linha.",
     "group": "Grupo",
-    "group-accounts": "group-accounts",
+    "group-accounts": "Agrupar contas",
     "group-by-day": "Agrupar por dia",
     "group-by-day-unixtime": "Agrupar por dia - unixtime",
     "group-by-month": "group-by-month",
@@ -768,7 +768,7 @@
     "installer-p": "Bem-vindo ao instalador FacturaScripts. Preencha os campos necessários para se conectar ao banco de dados.",
     "installer-requirements": "As seguintes extensões e funções são necessárias para FacturaScripts:",
     "integrity-check": "Integrity check",
-    "integrity-check-help": "This is a check of system integrity, described as",
+    "integrity-check-help": "Esta é uma verificação da integridade do sistema, descrita como",
     "interest": "Interesse",
     "international-identifier": "Identificador internacional",
     "intra-community": "Intra-comunitária",
@@ -871,7 +871,7 @@
     "level": "Nível",
     "level-benefit-sales": "Nível para ver benefícios",
     "level-cost-sales": "Nível para ver custos",
-    "level1": "Level 1",
+    "level1": "Nível 1",
     "level2": "Level 2",
     "level3": "Nível 3",
     "level4": "Level 4",
@@ -887,7 +887,7 @@
     "loading-controller": "Controlador de carga: '0'",
     "location": "Location",
     "lock-accounting": "Bloquear contabilidade",
-    "lock-entry": "lock-entry",
+    "lock-entry": "Bloquear lançamento",
     "lock-invoice": "Bloquear fatura",
     "lock-unlock": "Bloquear-Desbloquear",
     "lock-unlock-account-entry": "Block\/Unlock the accounting entry",
@@ -1022,7 +1022,7 @@
     "no-print-permission": "Não tem permissão para imprimir ou exportar",
     "no-reference": "Sin referencia",
     "no-selected-item": "Nenhum item selecionado",
-    "no-stock": "Sem estoque",
+    "no-stock": "Sem stock",
     "non-editable-accounting-entry": "Asiento contábil não editável",
     "non-editable-columns": "Colunas não editáveis: %columns%",
     "non-editable-document": "Non editable document",
@@ -1054,8 +1054,8 @@
     "numsupplier": "Num. fornecedor",
     "observations": "Observações",
     "october": "Octubre",
-    "offsetting-account": "Offsetting account",
-    "only-active": "only-active",
+    "offsetting-account": "Conta de contrapartida",
+    "only-active": "Apenas ativos",
     "only-charged": "only-charged",
     "only-closed": "Apenas fechado",
     "only-insert": "Sólo añadir",
@@ -1063,7 +1063,7 @@
     "only-pending": "Só pendentes",
     "only-suspended": "only-suspended",
     "open": "Abrir",
-    "open-exercise": "open-exercise",
+    "open-exercise": "Abrir exercício",
     "open-tab": "Abrir numa nova aba",
     "opened": "Aberto",
     "opening-acounting-completed": "opening-acounting-completed",
@@ -1130,7 +1130,7 @@
     "percentage": "Percentagem",
     "percentage-commission": "% Comissão",
     "percentage-discount": "p",
-    "percentage-surcharge": "% Surcharge",
+    "percentage-surcharge": "% Taxa",
     "percentage-vat": "% IVA",
     "period": "Período",
     "personalized": "Personalizado",
@@ -1227,12 +1227,12 @@
     "quantity-remaining": "Quantidade restante",
     "quantity-served": "Quantidade servida",
     "quantity-sold": "vendido-em-quantidade",
-    "randomizer-generating-more-items": "randomizer-generating-more-items",
+    "randomizer-generating-more-items": "Gerando mais itens...",
     "rate": "rate",
     "rates": "Preços",
     "re": "RE",
     "re-open": "Reabrir",
-    "react": "Reaccionar",
+    "react": "Reagir",
     "read-message-by": "Lido por %nick% em %date%",
     "read-more": "Leer más",
     "readonly": "Apenas leitura",
@@ -1347,7 +1347,7 @@
     "send-invoices": "Enviar faturas",
     "send-location": "Enviar ubicación",
     "send-mail": "Enviar email",
-    "send-mail-error": "send-mail-error",
+    "send-mail-error": "Erro ao enviar email",
     "send-mail-ok": "Email enviado corretamente",
     "send-videos": "Enviar vídeos",
     "sent-a-audio": "Enviou um áudio",
@@ -1410,7 +1410,7 @@
     "source-code": "Source code",
     "special-account": "Conta especial",
     "special-accounting-entries": "special-accounting-entries",
-    "special-accounts": "special-accounts",
+    "special-accounts": "Contas especiais",
     "specials-actions": "Specials Actions",
     "spreadsheet-xls": "Arquivo XLS",
     "standard": "Padrão",
@@ -1426,7 +1426,7 @@
     "status-name-valid-length": "Nome do status inválido. Deve ter entre 1 e 20 caracteres.",
     "status-value-is-number": "El campo estado deve ser numérico.",
     "stock": "estoque",
-    "stock-transfer": "stock transfer",
+    "stock-transfer": "Transferência de stock",
     "stock-transfers": "stock transfers",
     "stockmax": "Estoque max.",
     "stockmin": "Stock min.",
@@ -1450,7 +1450,7 @@
     "subject": "Assunto",
     "subtotal": "Subtotal",
     "subtract": "Tirar do estoque",
-    "success": "success",
+    "success": "Sucesso",
     "sum": "Soma",
     "sum-netos-line-tax-must-be": "A soma da rede das linhas do IVA deve ser: 0",
     "sum-total-line-tax-must-be": "A soma dos totais IVA das linhas IVA deve ser: 0",
@@ -1552,7 +1552,7 @@
     "tracking-code": "Código de envio",
     "transfer": "Transferência",
     "transfers": "Transferências",
-    "transfers-stock": "Transfers stock",
+    "transfers-stock": "Transferências de stock",
     "translation": "Tradução",
     "translations": "Traduções",
     "travel": "Viagem",
@@ -1592,7 +1592,7 @@
     "updated-model": "Actualizado %model% (%key%) %desc%",
     "updater": "Updater",
     "updates-available": "Actualizaciones disponibles",
-    "updates-available-p": "Hay actualizaciones disponibles de FacturaScripts. Por favor, haz clic en el actualizador y descarga la nueva versión. Las actualizaciones corrigen fallos y añaden nuevas funciones.",
+    "updates-available-p": "Há atualizações disponíveis para o FacturaScripts. Por favor, clique no atualizador e faça o download da nova versão. As atualizações corrigem erros e adicionam novas funções.",
     "updating-attached-relations": "Atualizando contadores de relações anexadas",
     "upload-file": "E",
     "uploaded-at": "Carregado em",
